# arc_lane_detector

./: CMakeLists.txt  README.md  package.xml
Ideas/: possible_parameters
Protokoll/: IPM_Klasse
archive/: test_imgproc_static.cpp  test_ipm_with_ros.cpp
config/: camera_webcam_arc.yaml  camera_webcam_nikku.yaml  head_camera_arc.yaml
include/config/: head_camera_arc.yaml  head_camera_nikku.yaml
include/inverse_perspective_mapping/: Optional  inverse_perspective_mapping.hpp
launch/: camera.launch  lanetracker.launch  lanetracker.yaml
src/: inverse_perspective_mapping.cpp  lanetracking.cpp  main.cpp  plot_lines.py  test_imgproc_static.cpp  test_imgproc_with_ipm_static.cpp  test_imgproc_with_ros.cpp  test_ipm.cpp  test_ipm_with_ros.cpp  test_robin.cpp
test_src/: codesnippets.cpp  removed_code.cpp  test_imgproc_with_ros.cpp  test_ipm.cpp  test_nikhilesh.cpp  test_nikhilesh.cpp~  test_ransac.cpp  test_robin.cpp  workshop
